syntax = "proto3";

package chat;

service ChatService {
  rpc GetChatHistory(ChatHistoryRequest) returns (ChatHistoryResponse);
}

message ChatHistoryRequest {
  string user = 1;
}

message ChatHistoryResponse {
  repeated ChatMessage messages = 1;
}

message ChatMessage {
  string fromUser = 1;
  string toUser = 2;
  string message = 3;
  int64 timestamp = 4;
}
